# telegram-writing-assistant

./: .gitignore  CLAUDE.md  CUsersalexegittelegram-writing-assistant.tmptest_out.txt  CUsersalexegittelegram-writing-assistant.tmptest_results.txt  Makefile  README.md  STYLE.md  SUMMARY.md  claude_runner.py  main.py  message_queue.py  mock_claude.py  process.py  process_request.py  progress_tracker.py  pyproject.toml  session_retrier.py  substack.csv  test_message_queue.py  test_output.txt  test_queue_batch.py
.claude/: plan.md  settings.local.json
.tmp/: process_inbox_media.py
articles/: _index.md  _personal-voice.md  agent-project-ideas.md  agent-team-of-teams.md  agents-workshop.md  ai-as-personal-analyst.md  ai-assisted-automation-course-idea.md  ai-book-generator.md  ai-bootcamp-course.md  ai-buildcamp-course-announcement.md  ai-buildcamp-office-hours.md  ai-dev-tools-zoomcamp-testimonials.md  ai-engineer-my-vision.md  ai-engineer-role-definition-qa.md  ai-engineer-role-research.md  ai-engineer-rpg-game.md  ai-engineer-webinar-qa.md  ai-engineering-field-guide.md  ai-hero-email-course.md  ai-hero-rebranding.md  ai-roles-now-and-then.md  ai-search-visibility.md  ai-testing-tools.md  automator-bot.md  bot-master.md  building-projects-with-agent-teams.md  certificates-and-ai-design-experiments.md  chatgpt-data-viewer.md  claude-bash-helpers.md  claude-code-experiments.md  claude-helpers.md  claude-skills-vs-agents-md.md  cloud-cost-reminders.md  code-agents-building-blocks.md  codehive.md  codex-experiments.md  coming-up-with-project-ideas.md  (+85 more)
tests/: __init__.py  (+6 more)
(+1998 files in other folders)
